erDiagram
    USERS {
        int user_id PK
        string FirstName
        string LastName
        string Email
        string Password
        string ImageUrl
        boolean is_active
    }
    
    ROLES {
        int role_id PK
        string RoleName
    }
    
    USER_ROLES {
        int user_id FK
        int role_id FK
    }
    
    PROJECTS {
        int project_id PK
        string Name
        string Description
        date StartDate
        date EndDate
        string Status
        float Budget
        float BudgetUsed
    }
    
    PROJECT_MEMBERS {
        int project_member_id PK
        int project_id FK
        int user_id FK
        string RoleInProject
        float TotalHoursWorked
    }
    
    TASKS {
        int task_id PK
        int project_id FK
        string Title
        string Description
        string Type
        string Priority
        string Status
        int CreatedBy FK
        int AssignedTo FK
        datetime CreatedAt
        datetime UpdatedAt
        datetime Deadline
        float BudgetUsed
    }
    
    TASK_TYPES {
        int type_id PK
        string TypeName
        string Description
    }
    
    TASK_DEPENDENCIES {
        int task_id FK
        int dependent_task_id FK
    }
    
    TASK_ATTACHMENTS {
        int attachment_id PK
        int task_id FK
        string FileUrl
        string FileName
        datetime UploadedAt
    }
    
    TIME_ENTRIES {
        int time_entry_id PK
        int task_id FK
        int user_id FK
        float TimeSpent
        date EntryDate
    }
    
    LANGUAGES {
        int language_id PK
        string LanguageName
    }
    
    PROJECT_LANGUAGES {
        int project_language_id PK
        int project_id FK
        int language_id FK
        float UsagePercentage
    }
    
    NOTIFICATIONS {
        int notification_id PK
        int user_id FK
        string Content
        datetime CreatedAt
    }
    
    SPRINTS {
        int sprint_id PK
        int project_id FK
        string Name
        date StartDate
        date EndDate
        string Goal
        string Status
    }
    
    SPRINT_TASKS {
        int sprint_id FK
        int task_id FK
    }
    
    BOARDS {
        int board_id PK
        int project_id FK
        string Name
        string BoardType
    }
    
    BOARD_COLUMNS {
        int column_id PK
        int board_id FK
        string Name
        int OrderIndex
    }
    
    COMMENTS {
        int comment_id PK
        int task_id FK
        int user_id FK
        string Content
        datetime CreatedAt
    }
    
    TASK_STATUS_HISTORY {
        int history_id PK
        int task_id FK
        int user_id FK
        string OldStatus
        string NewStatus
        datetime UpdatedAt
    }
    
    PROJECT_ATTACHMENTS {
        int attachment_id PK
        int project_id FK
        string FileUrl
        string FileName
        datetime UploadedAt
    }
    
    SUBTASKS {
        int subtask_id PK
        int parent_task_id FK
        int assigned_to FK
        string Title
        string Status
        datetime CreatedAt
        datetime UpdatedAt
    }
    
    USERS ||--o{ USER_ROLES : "has"
    ROLES ||--o{ USER_ROLES : "assigned to"
    
    USERS ||--o{ PROJECT_MEMBERS : "is member in"
    PROJECTS ||--o{ PROJECT_MEMBERS : "has"
    
    PROJECTS ||--o{ TASKS : "contains"
    USERS ||--o{ TASKS : "creates"
    USERS ||--o{ TASKS : "assigned to"
    TASK_TYPES ||--o{ TASKS : "categorizes"
    
    TASKS ||--o{ TASK_DEPENDENCIES : "depends on"
    
    TASKS ||--o{ TASK_ATTACHMENTS : "has"
    
    TASKS ||--o{ TIME_ENTRIES : "logs"
    USERS ||--o{ TIME_ENTRIES : "logs"
    
    PROJECTS ||--o{ PROJECT_LANGUAGES : "uses"
    LANGUAGES ||--o{ PROJECT_LANGUAGES : "is used in"
    
    USERS ||--o{ NOTIFICATIONS : "receives"
    
    PROJECTS ||--o{ SPRINTS : "has"
    SPRINTS ||--o{ SPRINT_TASKS : "includes"
    TASKS ||--o{ SPRINT_TASKS : "is in"
    
    PROJECTS ||--o{ BOARDS : "has"
    BOARDS ||--o{ BOARD_COLUMNS : "contains"
    
    TASKS ||--o{ COMMENTS : "has"
    
    TASKS ||--o{ TASK_STATUS_HISTORY : "has"
    USERS ||--o{ TASK_STATUS_HISTORY : "updates"
    
    PROJECTS ||--o{ PROJECT_ATTACHMENTS : "has"
    
    TASKS ||--o{ SUBTASKS : "contains"
    USERS ||--o{ SUBTASKS : "assigned to"
